--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,6 @@ dependencies:
     sdk: flutter
   badges: ^1.1.4
   carousel_slider: null
-  cool_alert: ^1.0.1
   cupertino_icons: ^1.0.0
   easy_localization: ^2.3.3
   firebase_auth: ^0.18.0+1
@@ -33,6 +32,7 @@ dependencies:
   share: ^0.6.5+4
   shared_preferences: null
   url_launcher: ^5.5.0
+  flare_flutter: ^2.0.6
 
 dev_dependencies:
   flutter_test:
