--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: A new Flutter project.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 2.0.0+18
+version: 2.0.1+19
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -27,7 +27,7 @@ dependencies:
   http: ^0.12.2
   modal_progress_hud: null
   oktoast: ^2.3.2
-  permission_handler: null
+  # permission_handler: null
   photo_view: ^0.10.2
   place_picker: ^0.9.15
   share: ^0.6.5+4
